# viewer

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  LICENSE  README.md
src/: .clang-format  .clang-tidy  CMakeLists.txt  CPPLINT.cfg  meson.build
src/base/: CMakeLists.txt  error.cc  error.h  make_unique.h  meson.build
src/gfx/: CMakeLists.txt  meson.build  shader.cc  shader.h
src/ui/: CMakeLists.txt  application.cc  application.h  meson.build  offscreen_context.cc  offscreen_context.h  ui_window.cc  ui_window.h  window.cc  window.h
src/viewer/: CMakeLists.txt  error.h  main.cc  main_window.cc  main_window.h  main_window_worker.cc  main_window_worker.h  meson.build  viewer.cc  viewer.h
src/viewer/graphics/: shader.cc  shader.h
src/viewer/ui/: offscreen_context.cc  offscreen_context.h  ui.cc  ui.h  ui_window.cc  ui_window.h  window.cc  window.h
src/viewer/utils/: make_unique.h
tools/: install-deps.sh  static-analysis.sh
